bevy_asset_loader/tests/ui/tuple.stderr
error: only named fields are supported to derive AssetCollection
 --> $DIR/tuple.rs:6:12
  |
6 | struct Test(usize);
  |            ^^^^^^^
